[dependencies.bitcoin-autofile]
path = "../bitcoin-autofile"
version = "0.1.20"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-serialize]
path = "../bitcoin-serialize"
version = "0.1.19"

[dependencies.derive_builder]
workspace = true

[dependencies.export-magic]
workspace = true

[dependencies.getset]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.tracing]
workspace = true

[package]
authors = ["YourName <you@example.com>"]
description = "Rust implementation of Bitcoin Core-style transaction confirmation statistics and feerate estimation, combining exponentially decayed historical data with live mempool tracking to compute fee recommendations for target confirmation horizons."
edition = "2024"
license = "MIT"
name = "bitcoin-tx-confirm-stats"
version = "0.1.1"
keywords = ["bitcoin", "feeestimation", "mempool", "confirmationtime", "blockchain"]
categories = ["cryptography", "finance", "network-programming", "science", "mathematics"]
