[package]
name = "bitcoinleveldb-compaction"
version = "0.1.0"
authors = ["YourName <you@example.com>"]
license = "MIT"
edition = "2024"
description = "todo: write a description here"

# keywords = []
# categories = []

[dependencies]
bitcoin-imports = { path = "../bitcoin-imports" }
bitcoinleveldb-version = { path = "../bitcoinleveldb-version" }
bitcoinleveldb-versionedit = { path = "../bitcoinleveldb-versionedit" }
bitcoinleveldb-file = { path = "../bitcoinleveldb-file" }
bitcoinleveldb-options = { path = "../bitcoinleveldb-options" }
bitcoinleveldb-slice = { path = "../bitcoinleveldb-slice" }
bitcoinleveldb-key = { path = "../bitcoinleveldb-key" }
