[package]
name = "bitcoinleveldb-compaction"
version = "0.1.0"
authors = ["YourName <you@example.com>"]
license = "MIT"
edition = "2024"
description = "todo: write a description here"

# keywords = []
# categories = []

[dependencies]
tracing.workspace = true
derive_builder.workspace = true
bitcoin-imports = { path = "../bitcoin-imports" }
bitcoinleveldb-version = { path = "../bitcoinleveldb-version" }
bitcoinleveldb-versionedit = { path = "../bitcoinleveldb-versionedit" }
bitcoinleveldb-file = { path = "../bitcoinleveldb-file" }
bitcoinleveldb-options = { path = "../bitcoinleveldb-options" }
bitcoinleveldb-slice = { path = "../bitcoinleveldb-slice" }
bitcoinleveldb-key = { path = "../bitcoinleveldb-key" }
bitcoinleveldb-tablebuilder = { path = "../bitcoinleveldb-tablebuilder" }
bitcoinleveldb-iterator = { path = "../bitcoinleveldb-iterator" }
bitcoinleveldb-cfg = { path = "../bitcoinleveldb-cfg" }
bitcoinleveldb-comparator = { path = "../bitcoinleveldb-comparator" }
bitcoinleveldb-versionsetinterface = { path = "../bitcoinleveldb-versionsetinterface" }
bitcoinleveldb-versionsetutil = { path = "../bitcoinleveldb-versionsetutil" }
