[package]
name = "bitcoinleveldb-compactionstats"
version = "0.1.0"
authors = ["YourName <you@example.com>"]
license = "MIT"
edition = "2024"
description = "todo: write a description here"

# keywords = []
# categories = []

[dependencies]
tracing.workspace        = true
getset.workspace         = true
derive_builder.workspace = true
bitcoin-imports = { path = "../bitcoin-imports" }
