[package]
name = "bitcoinleveldb-dbconstructor"
version = "0.1.0"
authors = ["YourName <you@example.com>"]
license = "MIT"
edition = "2024"
description = "todo: write a description here"

# keywords = []
# categories = []

[dependencies]
tracing.workspace               = true
bitcoin-imports                 = { path = "../bitcoin-imports" }
bitcoinleveldb-iterator         = { path = "../bitcoinleveldb-iterator" }
bitcoinleveldb-tableconstructor = { path = "../bitcoinleveldb-tableconstructor" }
bitcoinleveldb-comparator       = { path = "../bitcoinleveldb-comparator" }
bitcoinleveldb-dbinterface      = { path = "../bitcoinleveldb-dbinterface" }
bitcoinleveldb-options          = { path = "../bitcoinleveldb-options" }
bitcoinleveldb-blockconstructor = { path = "../bitcoinleveldb-blockconstructor" }
bitcoinleveldb-status           = { path = "../bitcoinleveldb-status" }
bitcoinleveldb-batch            = { path = "../bitcoinleveldb-batch" }
bitcoinleveldb-iteratorinner    = { path = "../bitcoinleveldb-iteratorinner" }
bitcoinleveldb-dbimpl           = { path = "../bitcoinleveldb-dbimpl" }
