[package]
name = "bitcoinleveldb-dbimplinner"
version = "0.1.0"
authors = ["YourName <you@example.com>"]
license = "MIT"
edition = "2024"
description = "todo: write a description here"

# keywords = []
# categories = []

[dependencies]
bitcoin-imports = { path = "../bitcoin-imports" }
bitcoinleveldb-status = { path = "../bitcoinleveldb-status" }
bitcoinleveldb-compactionstats = { path = "../bitcoinleveldb-compactionstats" }
bitcoinleveldb-versionset = { path = "../bitcoinleveldb-versionset" }
bitcoinleveldb-compaction = { path = "../bitcoinleveldb-compaction" }
bitcoinleveldb-snapshot = { path = "../bitcoinleveldb-snapshot" }
bitcoinleveldb-writebatch = { path = "../bitcoinleveldb-writebatch" }
bitcoinleveldb-memtable = { path = "../bitcoinleveldb-memtable" }
bitcoinleveldb-dbimplwriter = { path = "../bitcoinleveldb-dbimplwriter" }
bitcoinleveldb-cfg = { path = "../bitcoinleveldb-cfg" }
bitcoinleveldb-batch = { path = "../bitcoinleveldb-batch" }
