[package]
name = "bitcoinleveldb-dbimplwriter"
version = "0.1.0"
authors = ["YourName <you@example.com>"]
license = "MIT"
edition = "2024"
description = "todo: write a description here"

# keywords = []
# categories = []

[dependencies]
bitcoin-imports = { path = "../bitcoin-imports" }
bitcoinleveldb-writebatch = { path = "../bitcoinleveldb-writebatch" }
bitcoinleveldb-status = { path = "../bitcoinleveldb-status" }
bitcoinleveldb-batch = { path = "../bitcoinleveldb-batch" }
