[package]
name = "bitcoinleveldb-dbinterface"
version = "0.1.0"
authors = ["YourName <you@example.com>"]
license = "MIT"
edition = "2024"
description = "todo: write a description here"

# keywords = []
# categories = []

[dependencies]
export-magic.workspace = true
tracing.workspace = true
bitcoin-imports = { path = "../bitcoin-imports" }
bitcoinleveldb-slice = { path = "../bitcoinleveldb-slice" }
bitcoinleveldb-status = { path = "../bitcoinleveldb-status" }
bitcoinleveldb-writebatch = { path = "../bitcoinleveldb-writebatch" }
bitcoinleveldb-snapshot = { path = "../bitcoinleveldb-snapshot" }
bitcoinleveldb-options = { path = "../bitcoinleveldb-options" }
bitcoinleveldb-iterator = { path = "../bitcoinleveldb-iterator" }
bitcoinleveldb-batch = { path = "../bitcoinleveldb-batch" }
bitcoinleveldb-iteratorinner = { path = "../bitcoinleveldb-iteratorinner" }
bitcoinleveldb-compat = { path = "../bitcoinleveldb-compat" }
