[package]
name        = "bitcoinleveldb-dbiter"
version     = "0.1.0"
authors     = ["YourName <you@example.com>"]
license     = "MIT"
edition     = "2024"
description = "todo: write a description here"

# keywords = []
# categories = []

[dependencies]
tracing.workspace = true
bitcoin-imports            = { path = "../bitcoin-imports" }
bitcoinleveldb-iterator    = { path = "../bitcoinleveldb-iterator" }
bitcoinleveldb-key         = { path = "../bitcoinleveldb-key" }
bitcoinleveldb-slice       = { path = "../bitcoinleveldb-slice" }
bitcoinleveldb-dbinterface = { path = "../bitcoinleveldb-dbinterface" }
bitcoinleveldb-status      = { path = "../bitcoinleveldb-status" }
bitcoinleveldb-comparator = { path = "../bitcoinleveldb-comparator" }
bitcoinleveldb-rand = { path = "../bitcoinleveldb-rand" }
bitcoinleveldb-iteratorinner = { path = "../bitcoinleveldb-iteratorinner" }
bitcoinleveldb-cfg = { path = "../bitcoinleveldb-cfg" }
