[package]
name = "bitcoinleveldb-dbiterstate"
version = "0.1.0"
authors = ["YourName <you@example.com>"]
license = "MIT"
edition = "2024"
description = "todo: write a description here"

# keywords = []
# categories = []

[dependencies]
tracing.workspace = true
bitcoin-imports = { path = "../bitcoin-imports" }
bitcoinleveldb-memtable = { path = "../bitcoinleveldb-memtable" }
bitcoinleveldb-version = { path = "../bitcoinleveldb-version" }
