[package]
name = "bitcoinleveldb-harness"
version = "0.1.0"
authors = ["YourName <you@example.com>"]
license = "MIT"
edition = "2024"
description = "todo: write a description here"

# keywords = []
# categories = []

[dependencies]
bitcoin-imports = { path = "../bitcoin-imports" }
bitcoinleveldb-options = { path = "../bitcoinleveldb-options" }
bitcoinleveldb-tableconstructor = { path = "../bitcoinleveldb-tableconstructor" }
bitcoinleveldb-rand = { path = "../bitcoinleveldb-rand" }
bitcoinleveldb-dbinterface = { path = "../bitcoinleveldb-dbinterface" }
bitcoinleveldb-iterator = { path = "../bitcoinleveldb-iterator" }
bitcoinleveldb-blockconstructor = { path = "../bitcoinleveldb-blockconstructor" }
bitcoinleveldb-dbtest = { path = "../bitcoinleveldb-dbtest" }
