[package]
name = "bitcoinleveldb-harness"
version = "0.1.0"
authors = ["YourName <you@example.com>"]
license = "MIT"
edition = "2024"
description = "todo: write a description here"

# keywords = []
# categories = []

[dependencies]
bitcoin-imports = { path = "../bitcoin-imports" }
bitcoinleveldb-options = { path = "../bitcoinleveldb-options" }
bitcoinleveldb-tableconstructor = { path = "../bitcoinleveldb-tableconstructor" }
bitcoinleveldb-rand = { path = "../bitcoinleveldb-rand" }
bitcoinleveldb-dbinterface = { path = "../bitcoinleveldb-dbinterface" }
bitcoinleveldb-iterator = { path = "../bitcoinleveldb-iterator" }
bitcoinleveldb-blockconstructor = { path = "../bitcoinleveldb-blockconstructor" }
bitcoinleveldbt-dbtest = { path = "../bitcoinleveldbt-dbtest" }
bitcoinleveldb-memtable = { path = "../bitcoinleveldb-memtable" }
bitcoinleveldb-dbconstructor = { path = "../bitcoinleveldb-dbconstructor" }
bitcoinleveldb-comparator = { path = "../bitcoinleveldb-comparator" }
bitcoinleveldb-slice = { path = "../bitcoinleveldb-slice" }
bitcoinleveldb-iteratorinner = { path = "../bitcoinleveldb-iteratorinner" }
bitcoinleveldb-status = { path = "../bitcoinleveldb-status" }
tracing.workspace = true
traced-test.workspace = true
tracing-subscriber.workspace = true
tracing-setup.workspace = true
bitcoinleveldb-dbimplinner = { path = "../bitcoinleveldb-dbimplinner" }
bitcoinleveldb-blockcontents = { path = "../bitcoinleveldb-blockcontents" }
bitcoinleveldb-block = { path = "../bitcoinleveldb-block" }
