[build-dependencies.bitcoin-cfg]
path = "../bitcoin-cfg"
version = "0.1.19"

[dependencies.bitcoin-derive]
path = "../bitcoin-derive"
version = "0.1.19"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoinleveldb-coding]
path = "../bitcoinleveldb-coding"
version = "0.1.19"

[dependencies.bitcoinleveldb-crc32]
path = "../bitcoinleveldb-crc32"
version = "0.1.19"

[dependencies.bitcoinleveldb-file]
path = "../bitcoinleveldb-file"
version = "0.1.19"

[dependencies.bitcoinleveldb-rand]
path = "../bitcoinleveldb-rand"
version = "0.1.19"

[dependencies.bitcoinleveldb-slice]
path = "../bitcoinleveldb-slice"
version = "0.1.19"

[dependencies.bitcoinleveldb-status]
path = "../bitcoinleveldb-status"
version = "0.1.19"

[dependencies.bitcoinleveldb-util]
path = "../bitcoinleveldb-util"
version = "0.1.19"

[dependencies.tracing]
workspace = true

[package]
authors = ["YourName <you@example.com>"]
description = "bitcoinleveldb-logtools provides utilities for LevelDB log management, focusing on Bitcoin data integrity and manipulation. It offers log record enumeration, extended record types for error handling, and functions for memory and string management."
edition = "2024"
license = "MIT"
name = "bitcoinleveldb-logtools"
version = "0.1.1"
keywords = ["leveldb", "logs", "bitcoin", "crcs", "pointers"]
categories = ["algorithms", "data-structures", "database", "parsing"]
