[package]
name = "bitcoinleveldb-modeldb"
version = "0.1.0"
authors = ["YourName <you@example.com>"]
license = "MIT"
edition = "2024"
description = "todo: write a description here"

# keywords = []
# categories = []

[dependencies]
tracing.workspace = true
derive_builder.workspace = true
getset.workspace = true
bitcoin-imports = { path = "../bitcoin-imports" }
bitcoinleveldb-dbinterface = { path = "../bitcoinleveldb-dbinterface" }
bitcoinleveldb-options = { path = "../bitcoinleveldb-options" }
bitcoinleveldb-slice = { path = "../bitcoinleveldb-slice" }
bitcoinleveldb-status = { path = "../bitcoinleveldb-status" }
bitcoinleveldb-iterator = { path = "../bitcoinleveldb-iterator" }
bitcoinleveldb-snapshot = { path = "../bitcoinleveldb-snapshot" }
bitcoinleveldb-batch = { path = "../bitcoinleveldb-batch" }
bitcoinleveldb-iteratorinner = { path = "../bitcoinleveldb-iteratorinner" }
bitcoinleveldb-key = { path = "../bitcoinleveldb-key" }
