[dependencies.bitcoin-derive]
path = "../bitcoin-derive"
version = "0.1.19"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-support]
path = "../bitcoin-support"
version = "0.1.19"

[dependencies.bitcoinleveldb-env]
path = "../bitcoinleveldb-env"
version = "0.1.19"

[dependencies.bitcoinleveldb-file]
path = "../bitcoinleveldb-file"
version = "0.1.19"

[dependencies.bitcoinleveldb-limiter]
path = "../bitcoinleveldb-limiter"
version = "0.1.19"

[dependencies.bitcoinleveldb-log]
path = "../bitcoinleveldb-log"
version = "0.1.19"

[dependencies.bitcoinleveldb-slice]
path = "../bitcoinleveldb-slice"
version = "0.1.19"

[dependencies.bitcoinleveldb-status]
path = "../bitcoinleveldb-status"
version = "0.1.19"

[dependencies.bitcoinleveldb-util]
path = "../bitcoinleveldb-util"
version = "0.1.19"

[dependencies.derive_builder]
workspace = true

[dependencies.getset]
workspace = true

[dependencies.tracing]
workspace = true

[package]
authors = ["YourName <you@example.com>"]
description = "A POSIX-compatible sequential file reader for LevelDB, designed for efficient file access and I/O handling using system functions in Rust."
edition = "2024"
license = "MIT"
name = "bitcoinleveldb-posixseqfile"
version = "0.1.1"
keywords = ["posix", "sequential", "file", "reading", "bitcoinleveldb"]
categories = ["filesystem", "algorithms", "os", "development-tools", "data-structures"]
