[dependencies.bitcoin-derive]
path = "../bitcoin-derive"
version = "0.1.19"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-support]
path = "../bitcoin-support"
version = "0.1.19"

[dependencies.bitcoinleveldb-env]
path = "../bitcoinleveldb-env"
version = "0.1.19"

[dependencies.bitcoinleveldb-file]
path = "../bitcoinleveldb-file"
version = "0.1.19"

[dependencies.bitcoinleveldb-limiter]
path = "../bitcoinleveldb-limiter"
version = "0.1.19"

[dependencies.bitcoinleveldb-log]
path = "../bitcoinleveldb-log"
version = "0.1.19"

[dependencies.bitcoinleveldb-slice]
path = "../bitcoinleveldb-slice"
version = "0.1.19"

[dependencies.bitcoinleveldb-status]
path = "../bitcoinleveldb-status"
version = "0.1.19"

[dependencies.bitcoinleveldb-util]
path = "../bitcoinleveldb-util"
version = "0.1.19"

[dependencies.derive_builder]
workspace = true

[dependencies.getset]
workspace = true

[dependencies.tracing]
workspace = true

[package]
authors = ["YourName <you@example.com>"]
description = "POSIX-backed implementation of a LevelDB-compatible SequentialFile using read, lseek, and close for efficient sequential file access in Bitcoin-oriented storage engines."
edition = "2024"
license = "MIT"
name = "bitcoinleveldb-posixseqfile"
version = "0.1.1"
keywords = ["leveldb", "bitcoin", "posix", "sequentialfile", "storage"]
categories = ["filesystem", "network-programming", "data-structures"]
