[dependencies.bitcoin-derive]
path = "../bitcoin-derive"
version = "0.1.19"

[dependencies.bitcoin-imports]
path = "../bitcoin-imports"
version = "0.1.19"

[dependencies.bitcoin-support]
path = "../bitcoin-support"
version = "0.1.19"

[dependencies.bitcoinleveldb-env]
path = "../bitcoinleveldb-env"
version = "0.1.19"

[dependencies.bitcoinleveldb-file]
path = "../bitcoinleveldb-file"
version = "0.1.19"

[dependencies.bitcoinleveldb-limiter]
path = "../bitcoinleveldb-limiter"
version = "0.1.19"

[dependencies.bitcoinleveldb-log]
path = "../bitcoinleveldb-log"
version = "0.1.19"

[dependencies.bitcoinleveldb-slice]
path = "../bitcoinleveldb-slice"
version = "0.1.19"

[dependencies.bitcoinleveldb-status]
path = "../bitcoinleveldb-status"
version = "0.1.19"

[dependencies.bitcoinleveldb-util]
path = "../bitcoinleveldb-util"
version = "0.1.19"

[dependencies.tracing]
workspace = true

[package]
authors = ["YourName <you@example.com>"]
description = "POSIX-focused LevelDB support utilities: singleton environment wiring, mmap and open-file limit management, process-local POSIX file-lock tracking, and errno-to-Status translation for Bitcoin-leveldb integrations."
edition = "2024"
license = "MIT"
name = "bitcoinleveldb-posixtools"
version = "0.1.1"
keywords = ["leveldb", "posix", "filelocking", "bitcoin", "mmap"]
categories = ["filesystem", "network-programming", "database", "development-tools", "concurrency"]
